[package]
name = "boosterfun"
version = "0.1.0"
description = "Created with Expert"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boosterfun"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
amm-anchor = { git = "https://github.com/raydium-io/raydium-contract-instructions", branch = "master", default-features = false,features = ["devnet"] }

solana-program = "1.16.10"
fixed = "1.23.1"

